[gd_scene load_steps=2 format=3 uid="uid://c3action_slot"]

[ext_resource type="Script" path="res://scripts/ui/ActionSlot.gd" id="1_script"]

[node name="ActionSlot" type="PanelContainer"]
custom_minimum_size = Vector2(120, 100)
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5
alignment = 1

[node name="IconRect" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
mouse_filter = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 12
text = "Empty"
horizontal_alignment = 1
autowrap_mode = 2

[node name="PowerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Power: 10"
horizontal_alignment = 1

[node name="SlotNumber" type="Label" parent="."]
layout_mode = 1
mouse_filter = 2
anchors_preset = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 20.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "1"
